--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<p align="center">
+<html>
+  <body>
+    <p align="center">
 <a border="0" href="https://web.archive.org/web/20160313223633/http://www.facebook.com/pages/Elisa-Leverton-Studios/204749729541281">
 <img src="/web/20160313223633im_/http://elisalevertonstudios.com/resized_many_bags.jpg">
 </a>
 </p>
+  </body>
+</html>
