--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p align="center">
-      <a border="0" href="https://web.archive.org/web/20160313223633/http://www.facebook.com/pages/Elisa-Leverton-Studios/204749729541281">
+      <a border="0" href="https://www.facebook.com/pages/Elisa-Leverton-Studios/204749729541281">
 	<img src="resized_many_bags.jpg">
       </a>
     </p>
